# rs-api-template

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: main.rs
src/server/: routes.rs
