[package]
name = "template" # REPLACE *template* with the project name
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
warp = "0.3.3"
